# agrammon

./: .dockerignore  .drone.yml  .gitignore  .tool-versions  .travis.yml  CHANGELOG.md  CLAUDE.md  COPYRIGHT  Dockerfile  META6.json  Makefile  Makefile.am  Makefile.in  README-Excel  README-mac.md  README.md  TEST_RESULTS  VERSION  configure.ac  cpanfile  install-patched-deps.sh  runExcelTest.sh  runFrontendTests.sh  runKantonal.sh  runKantonal4.sh  runRegional.sh  runRegional5.sh  runRegional7.sh  runSingle.sh  runSingle5.sh  runSingle6.5.2.sh  runSingle7.sh  runWeb.sh  runWebDev.sh
.github/workflows/: backend-and-models.yml  backend.yml  test-ubuntu.yml  test.yml
db/: migrate-dataset-version-source.sql  migrate-issue-421-branch-storage.sql  migrate-issue-421-data-instance-table.sql  migrate-issue-421-rename-data-new-to-data.sql  migrate-issue-431-flatten-storage.sql  schema.sql
dev/: Dockerfile-ubuntu:18.04  META6.json  README-podman.md  agrammon.dev.yaml  pgpass
etc/: Makefile.am  agrammon-excel-test.cfg.yaml  agrammon.yaml.dist
frontend/: .npmrc  Makefile.am  Manifest.json  ToDo  compile.json  compile.json.test  config.json  generate.sh  package-lock.json  package.json  pnpm-lock.yaml  qmake  qx-lock.json  source-sha
frontend/source/: index.html
frontend/source/boot/: index.html
frontend/source/class/agrammon/: Application.js  Changelog.js  Footer.js  Info.js
frontend/source/class/agrammon/io/remote/: Rest.js  Rpc.js
frontend/source/class/agrammon/module/: Main.js
frontend/source/class/agrammon/module/dataset/: DatasetCache.js  DatasetComment.js  DatasetCreate.js  DatasetTable.js  DatasetTableSimple.js  DatasetTool.js  TagTable.js
frontend/source/class/agrammon/module/input/: Input.js  NavBar.js  NavFolder.js  PropTable.js  Variable.js  VariableComment.js
frontend/source/class/agrammon/module/input/regional/: BranchEditor.js  ConfigEditor.js  ConfigInstance.js
frontend/source/class/agrammon/module/output/: Graphs.js  Output.js  OutputSelector.js  Reports.js  Results.js  SubmitWindow.js
frontend/source/class/agrammon/module/user/: Account.js  Login.js  SelfService.js
frontend/source/class/agrammon/test/: AbstractRestTest.js  AuthTest.js  DatasetTest.js  DemoTest.js  README.md
frontend/source/class/agrammon/ui/: About.js  ViewerIframe.js
frontend/source/class/agrammon/ui/basic/: Link.js
frontend/source/class/agrammon/ui/dialog/: Comment.js  Confirm.js  Dialog.js  DocWindow.js  Error.js  Help.js  Log.js  MissingVariables.js  MsgBox.js  News.js
frontend/source/class/agrammon/ui/form/: LabelValue.js  VarInput.js  VarPassword.js
frontend/source/class/agrammon/ui/menu/: AdminMenu.js  FileMenu.js  HelpMenu.js  MainMenu.js  ModelMenu.js  NavMenu.js  OptionMenu.js
frontend/source/class/agrammon/ui/table/celleditor/: FancyTextField.js
frontend/source/class/agrammon/ui/table/cellrenderer/: Comment.js
frontend/source/class/agrammon/ui/table/cellrenderer/input/: Boolean.js  Default.js  Label.js  Number.js  Replace.js
frontend/source/class/agrammon/ui/table/cellrenderer/output/: Number.js  Text.js
frontend/source/class/agrammon/ui/table/model/: Smart.js
frontend/source/class/agrammon/ui/table/rowrenderer/: DatasetVersion.js  Fancy.js
frontend/source/class/agrammon/util/: FancyNumberFormat.js  Validators.js
frontend/source/doc/: about.de.html  about.en.html  about.fr.html  help.fr.html  login.en.html  techdoc.en.html
frontend/source/resource/agrammon/: agrammon-circle.xar  agrammon-dot.xar
frontend/source/translation/: C.po  de.po  en.po  fr.po
frontend/tests/: login.js
frontend/tools/: po-locations.pl
lib/: Makefile.am
lib/Agrammon/: CommonParser.pm6  CommonParser.rakumod  Config.pm6  Config.rakumod  DB.pm6  DB.rakumod  Dataset.pm6  Datasets.pm6  Documentation.pm6  Documentation.rakumod  Email.pm6  Environment.pm6  Environment.rakumod  Formula.pm6  Formula.rakumod  Inputs.pm6  Inputs.rakumod  JSONSchema.rakumod  LanguageParser.pm6  LanguageParser.rakumod  Model.pm6  Model.rakumod  ModelBuilder.pm6  ModelCache.pm6  ModelCache.rakumod  ModuleBuilder.pm6  ModuleBuilder.rakumod  ModuleParser.pm6  ModuleParser.rakumod  OutputReference.pm6  OutputReference.rakumod  Outputs.pm6  OutputsCache.pm6  OutputsCache.rakumod  Parser.pm6  Performance.pm6  Preprocessor.pm6  ResultCollector.pm6  Role.pm6  Routes.pm6  (+16 more)
share/: agrammon-rest.openapi  agrammon-rest.openapi.yaml  agrammon.openapi  agrammon.openapi.yaml
share/doc/: REST.md  changelog.de.html  help.de.html  help.en.html  login.de.html  login.fr.html  roadmap.de.html  style.css  techdoc.de.html  techdoc.fr.html
share/templates/: pdfexport.crotmp
share/translations/: de.po  en.po  fr.po
static/: agrammon.html  index.html
static/script/: agrammon.js
t/: 0-notabs.t  01-transactionally.rakutest  04-dev-password.sh  Dockerfile  README  annotate-inputs.rakutest  apiroutes.rakutest  apiroutes.t  config-version-template.rakutest  config.rakutest  config.t  create-docu.t  dataset.rakutest  dataset.t  datasource-csv.rakutest  datasource-csv.t  datasource-db.rakutest  datasource-db.t  datasource-json.rakutest  datasource-json.t  documentation.rakutest  documentation.t  email.t  enum-aliases.rakutest  enum-mapping.t  fix-tabs.rakutest  formula.rakutest  formula.t  hac_run-complex-model-with-filters.t  init-roles.sh  input-default-formula.rakutest  input-default-formula.t  inputs-branching.t  inputs-flatten-branch.t  inputs-flattening.rakutest  inputs-flattening.t  inputs.rakutest  inputs.t  log-collector.rakutest  log-collector.t  (+60 more)
t/lib/: AgrammonTest.pm6  AgrammonTest.rakumod
t/test-data/: CMilk-crazy-ws.nhd  CMilk.nhd  CMilkWithTests.nhd  DairyCow.nhd  EnumAliases.nhd  MultiInstanceInput.csv  PlantProduction.nhd  agrammon.cfg-version-template.yaml  agrammon.cfg-with-versions.yaml  agrammon.cfg.drone.yaml  agrammon.cfg.yaml  agrammon.drone.cfg.yaml  agrammon.schema.sql  agrammon.test.sql  agrammon_export.tex  agrammon_export.typ  agrammon_test.dump.sql  complex-model-benchmark-input.csv  complex-model-input.csv  (+15 more)
test/: curlTest_local_run.sh  testData.json  testDataRun.json
(+930 files in other folders)
